# llvm-project

mlir/: CMakeLists.txt
mlir/docs/Dialects/: SPIR-V.md
mlir/include/mlir/: InitAllPasses.h
mlir/include/mlir/Conversion/GPUToSPIRV/: ConvertGPUToSPIRVPass.h
mlir/include/mlir/Conversion/GPUToVulkan/: ConvertGPUToVulkanPass.h
mlir/include/mlir/Dialect/SPIRV/: Passes.h  Passes.td  SPIRVAttributes.h  SPIRVBase.td
mlir/lib/Conversion/GPUToSPIRV/: CMakeLists.txt  ConvertKernelFunctionToSPIRV.cpp  ConvertLaunchFuncToSPIRVCalls.cpp  ConvertLaunchFuncToVulkanCalls.cpp
mlir/lib/Conversion/GPUToVulkan/: CMakeLists.txt  ConvertGPULaunchFuncToVulkanLaunchFunc.cpp  ConvertLaunchFuncToVulkanCalls.cpp
mlir/lib/Dialect/SPIRV/: SPIRVDialect.cpp  SPIRVOps.cpp
mlir/lib/Dialect/SPIRV/Serialization/: Deserializer.cpp  Serializer.cpp  TranslateRegistration.cpp
mlir/lib/Dialect/SPIRV/Transforms/: LowerABIAttributesPass.cpp  RewriteInsertsPass.cpp
mlir/test/: CMakeLists.txt  lit.site.cfg.py.in
mlir/test/Conversion/GPUToSPIRV/: load-store.mlir  simple.mlir
mlir/test/Conversion/GPUToVulkan/: invoke-vulkan.mlir  lower-gpu-launch-vulkan-launch.mlir  simple.mlir
mlir/test/Dialect/SPIRV/Serialization/: debug.mlir
mlir/test/Dialect/SPIRV/Transforms/: abi-interface.mlir  abi-load-store.mlir
mlir/test/mlir-vulkan-runner/: add-floats.mlir  addi.mlir  simple.mlir  temp.mlir
mlir/tools/mlir-opt/: CMakeLists.txt
mlir/tools/mlir-tblgen/: SPIRVUtilsGen.cpp
mlir/tools/mlir-vulkan-runner/: CMakeLists.txt  VulkanRuntime.cpp  VulkanRuntime.h  mlir-vulkan-runner.cpp  vulkan-runtime-wrappers.cpp
mlir/unittests/Dialect/SPIRV/: CMakeLists.txt
mlir/unittests/Dialect/SPIRV/Runtime/: RuntimeTests.cpp
